// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns component test should render without crash with props 1`] = `
<div
  className="columns columnsCLass"
/>
`;

exports[`Columns component test should render without crash without props 1`] = `
<div
  className="columns "
/>
`;
